--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="DevPortfolio | Modern Web Development" />
     <meta property="og:description" content="Full-stack developer specializing in React, TypeScript, and modern web technologies. Building scalable web applications." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DevPortfolio | Modern Web Development" />
     <meta name="twitter:description" content="Full-stack developer specializing in React, TypeScript, and modern web technologies." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
     
     <link rel="canonical" href="/" />
   </head>
